<resources>

    <string name="app_name">我的日历</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">我的日历</string>

    <string name="monday">周一</string>
    <string name="thuesday">周二</string>
    <string name="wednesday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="saturday">周六</string>
    <string name="sunday">周日</string>
    
    <string name="add">你可以在此添加你的布局</string>
    
    <string name="ok">确定</string>
	<string name="submit">提交</string>
	<string name="truesubmit">确认提交</string>
	<string name="cancel">取消</string>
	<string name="back">返回</string>
	<string name="next">下一步</string>
	<string name="refresh">刷新</string>
	<string name="settings">设置</string>
	<string name="delete">删除</string>
	<string name="edit">编辑</string>
	<string name="save">保存</string>
	<string name="loading">正在加载……</string>
</resources>